added git plugin to yazi epic

--- a/.config/yazi/yazi.toml
+++ b/.config/yazi/yazi.toml
@@ -32,4 +32,13 @@ rules = [
 	# { mime = "application/json", use = "edit" },
 	# { name = "*.pdf", use = "open" },
 ]
-# ...
+
+[[plugin.prepend_fetchers]]
+id  = "git"
+url = "*"
+run = "git"
+
+[[plugin.prepend_fetchers]]
+id  = "git"
+url = "*/"
+run = "git"
