--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -272,6 +272,7 @@ $mainMod = SUPER # Sets "Windows" key as main modifier
 
 # Example binds, see https://wiki.hypr.land/Configuring/Binds/ for more
 bind = $mainMod, Return, exec, $terminal
+bind = $mainMod Return, Y, exec, $terminal -e yazi
 bind = $mainMod, V, exec, cliphist list | rofi -dmenu -display-columns 2 | cliphist decode | wl-copy
 bind = $mainMod, C, killactive,
 # bind = , Print, exec, grim -g "$(slurp)" - | swappy -f - 
